--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multistep",
   "version": "1.0.0",
-  "description": "", 
+  "description": "",
   "main": "backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
@@ -26,5 +27,4 @@
     "path": "^0.12.7",
     "validator": "^13.11.0"
   }
-    
 }
